Use TeamDriveListLoader to obtain the users team drive list on startup.

Currently the lists of users team drives is loaded on each update using
ChangeListLoader. We remove the logic from ChangeListLoader and use
TeamDriveListLoader instead. The full list is loaded only on startup, after
that team drive changes (new/removed/changed) will arrive via default change
list processing.

Bug: 845058, 829154, 723955
Change-Id: I06c8d6d8e26ca1f02003768b879af8aa96a78b5b
Reviewed-on: https://chromium-review.googlesource.com/1073036
Commit-Queue: Stuart Langley <slangley@chromium.org>
Reviewed-by: Sasha Morrissey <sashab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561828}
Former-commit-id: 279da6b0d92b52eca17e188c8b577e43c4f25eaf